force-app/main/default/objects/PRLtoPOL__c/PRLtoPOL__c.object-meta.xml
<CustomObject>
    <label>PRL to POL</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRL to POL</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>