force-app/main/default/objects/PRLtoPOL__c/fields/Allocated_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Quantity__c</fullName>
    <description>default = requested qty</description>
    <label>Allocated Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>