force-app/main/default/objects/PRLtoPOL__c/fields/POL_Status__c.field-meta.xml
<CustomField>
    <fullName>POL_Status__c</fullName>
    <label>Status in POL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Order_Line_Status</valueSetName>
    </valueSet>
</CustomField>