force-app/main/default/objects/PRLtoPOL__c/fields/PRL_Status__c.field-meta.xml
<CustomField>
    <fullName>PRL_Status__c</fullName>
    <label>Status in PRL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Request_Line_Status</valueSetName>
    </valueSet>
</CustomField>