force-app/main/default/objects/PRLtoPOL__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <label>Purchase Order Line</label>
    <referenceTo>Purchase_order_line__c</referenceTo>
    <relationshipLabel>PRL to POL</relationshipLabel>
    <relationshipName>PRL_to_POL</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>