force-app/main/default/objects/PRLtoPOL__c/fields/Purchase_request_line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_request_line__c</fullName>
    <label>Purchase Request Line</label>
    <referenceTo>Purchaserequestline__c</referenceTo>
    <relationshipLabel>PRL to POL</relationshipLabel>
    <relationshipName>PRL_to_POL</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>