force-app/main/default/objects/PRLtoPOL__c/fields/Qty_in_POL__c.field-meta.xml
<CustomField>
    <fullName>Qty_in_POL__c</fullName>
    <label>Qty in POL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>